--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,12 +3,12 @@ LocalMap=/Game/Example_Map
 GameName=v1
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
+EditorStartupMap=/Game/Maps/Cave_Tutorial.Cave_Tutorial
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
+GameDefaultMap=/Game/Maps/Cave_Tutorial.Cave_Tutorial
 GlobalDefaultGameMode=/Game/SideScrollerBP/Blueprints/SideScrollerGameMode.SideScrollerGameMode_C
 GlobalDefaultServerGameMode=None
 
